created multi column, responsive layout, hover and flip effects

--- a/index.html
+++ b/index.html
@@ -2,9 +2,213 @@
 	<html>
 	<head>
 		<title></title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">	
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
+	<div id="container, alignCol">
+		<div class="shirt-box">
+			<div class="image-container">
+				<input type="checkbox" class="flip-button">
+				<div class="flip3D">
+					<div class="image-back">
+						<img src="http://tympanus.net/Blueprints/ProductGridLayout/images/1_back.png">
+					</div>
+					<div class="image-front">
+						<img src="http://tympanus.net/Blueprints/ProductGridLayout/images/1_front.png">
+					</div>
+				</div>
+				<i class="fa fa-share fa-flip-vertical" aria-hidden="true"></i>
+			</div>
+			<div class="icon-container, alignCol">
+					<div class="icon-box">
+						<div class="centered">
+							<i class="fa fa-exchange" aria-hidden="true"></i>
+						</div>
+					</div>   
+	     			<div class="icon-box">
+	     				<div class="centered">
+							<i class="fa fa-heart-o" aria-hidden="true"></i>
+						</div>
+					</div>  
+	     			<div class="icon-box">
+	     				<div class="centered">
+							<span class="size">XL</span>
+							<div class="size-box">
+								<div>XL</div>
+								<div>L</div>
+								<div>M</div>
+								<div>S</div>
+							</div>
+						</div>
+					</div>   
+	     			<div class="icon-box">
+	     				<div class="centered">
+							<i class="fa fa-square fa-lg" aria-hidden="true"></i>
+						</div>
+						<div class="color-box">
+							<div class="colors">
+								<i class="fa fa-square fa-lg" aria-hidden="true" style="color: #81bce6"></i>
+								<i class="fa fa-square fa-lg" aria-hidden="true" style="color: pink"></i>
+							</div>
+							<div class="colors">
+								<i class="fa fa-square fa-lg" aria-hidden="true" style="color: orange"></i>
+								<i class="fa fa-square fa-lg" aria-hidden="true" style="color: green"></i>
+							</div>	
+						</div>
+					</div>
+					<div class="icon-box">
+						<div class="centered">
+							<i class="fa fa-shopping-cart" aria-hidden="true"></i>
+						</div>
+					</div>
+			</div>
+			<div class="label-container, alignCol">
+				<div class="product-name">
+					<p>Save my trees</p>
+				</div>
+				<div class="product-price">
+					<p><strong>$29</strong></p>
+				</div>
+			</div>
+		</div>
+		<div class="shirt-box">
+			<div class="image-container">
+				<input type="checkbox" class="flip-button">
+				<div class="flip3D">
+					<div class="image-back">
+						<img src="http://tympanus.net/Blueprints/ProductGridLayout/images/2_back.png">
+					</div>
+					<div class="image-front">
+						<img src="http://tympanus.net/Blueprints/ProductGridLayout/images/2_front.png">
+					</div>
+				</div>
+				<i class="fa fa-share fa-flip-vertical" aria-hidden="true"></i>
+			</div>
+			<div class="icon-container, alignCol">
+					<div class="icon-box">
+						<div class="centered">
+							<i class="fa fa-exchange" aria-hidden="true"></i>
+						</div>
+					</div>   
+	     			<div class="icon-box">
+	     				<div class="centered">
+							<i class="fa fa-heart-o" aria-hidden="true"></i>
+						</div>
+					</div>  
+	     			<div class="icon-box">
+	     				<div class="centered">
+							<span>XL</span>
+							<div class="size-box">
+								<div>XL</div>
+								<div>L</div>
+								<div>M</div>
+								<div>S</div>
+							</div>
+						</div>
+					</div>   
+	     			<div class="icon-box">
+	     				<div class="centered">
+							<i class="fa fa-square fa-lg" aria-hidden="true" style="color: #fc8dc6"></i>
+						</div>
+						<div class="color-box">
+							<div class="colors">
+								<i class="fa fa-square fa-lg" aria-hidden="true" style="color: #81bce6"></i>
+								<i class="fa fa-square fa-lg" aria-hidden="true" style="color: pink"></i>
+							</div>
+							<div class="colors">
+								<i class="fa fa-square fa-lg" aria-hidden="true" style="color: orange"></i>
+								<i class="fa fa-square fa-lg" aria-hidden="true" style="color: green"></i>
+							</div>
+							<!-- <div class="arrow-box">
+								<i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+							</div> -->	
+						</div>
+					</div>
+					<div class="icon-box">
+						<div class="centered">
+							<i class="fa fa-shopping-cart" aria-hidden="true"></i>
+						</div>
+					</div>
+			</div>
+			<div class="label-container, alignCol">
+				<div class="product-name">
+					<p>Nature Lover</p>
+				</div>
+				<div class="product-price">
+					<p><strong>$19</strong></p>
+				</div>
+			</div>
+		</div>
+		<div class="shirt-box">
+			<div class="image-container">
+				<input type="checkbox" class="flip-button">
+				<div class="flip3D">
+					<div class="image-back">
+						<img src="http://tympanus.net/Blueprints/ProductGridLayout/images/3_back.png">
+					</div>
+					<div class="image-front">
+						<img src="http://tympanus.net/Blueprints/ProductGridLayout/images/3_front.png">
+					</div>
+				</div>
+				<i class="fa fa-share fa-flip-vertical" aria-hidden="true"></i>
+			</div>
+			<div class="icon-container, alignCol">
+					<div class="icon-box">
+						<div class="centered">
+							<i class="fa fa-exchange" aria-hidden="true"></i>
+						</div>
+					</div>   
+	     			<div class="icon-box">
+	     				<div class="centered">
+							<i class="fa fa-heart-o" aria-hidden="true"></i>
+						</div>
+					</div>  
+	     			<div class="icon-box">
+	     				<div class="centered">
+							<span>XL</span>
+							<div class="size-box">
+								<div>XL</div>
+								<div>L</div>
+								<div>M</div>
+								<div>S</div>
+							</div>
+						</div>
+					</div>   
+	     			<div class="icon-box">
+	     				<div class="centered">
+							<i class="fa fa-square fa-lg" aria-hidden="true" style="color: #e6c46d"></i>
+						</div>
+						<div class="color-box">
+							<div class="colors">
+								<i class="fa fa-square fa-lg" aria-hidden="true" style="color: #81bce6"></i>
+								<i class="fa fa-square fa-lg" aria-hidden="true" style="color: pink"></i>
+							</div>
+							<div class="colors">
+								<i class="fa fa-square fa-lg" aria-hidden="true" style="color: orange"></i>
+								<i class="fa fa-square fa-lg" aria-hidden="true" style="color: green"></i>
+							</div>
+						</div>
+					</div>
+					<div class="icon-box">
+						<div class="centered">
+							<i class="fa fa-shopping-cart" aria-hidden="true"></i>
+						</div>
+					</div>
+			</div>
+			<div class="label-container, alignCol">
+				<div class="product-name">
+					<p>Forest Walk</p>
+				</div>
+				<div class="product-price">
+					<p><strong>$39</strong></p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 	</html>
